tests/snapshots/examples_fixtures/type_system__failing__41_effect_alias_now_ms_in_io_function.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/41_effect_alias_now_ms_in_io_function.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E400]: MISSING EFFECT

Call to `n` requires effect `Time` in this function signature.

  --> examples/type_system/failing/41_effect_alias_now_ms_in_io_function.flx:5:5
  |
5 |     n()
  |     ^
  |     - effectful call occurs here

Hint:
  Add `with Time` to the enclosing function.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with IO with () -> Unit with Time.

  --> examples/type_system/failing/41_effect_alias_now_ms_in_io_function.flx:5:5
  |
5 |     n()
  |     ^^^
  |     --- expected () -> Unit with IO, found () -> Unit with Time

Found 2 errors.
== stdout ==
<not executed>
